--- a/alpha/event/static/styles/suggest.css
+++ b/alpha/event/static/styles/suggest.css
@@ -51,7 +51,8 @@
     margin-left:20px;
     padding-top:5px;
     position:relative;
-    top:12px;
+    float: right;
+    margin-right: 27px;
 }
 
 .location_map {    
